Coming further along.

--- a/schedule.html
+++ b/schedule.html
@@ -4,11 +4,12 @@
 		<title>D2WC Mobile App</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" href="/css/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head> 
-	<body id="home"> 
+	<body id="schedule"> 
 		<header>
-			<h1>D2WC</h1>
+			<h1 id="logo">D2WC</h1>
+			
 		</header>
 		<div id ="content">
 		
@@ -236,7 +237,7 @@
 						<p class="speakers">Pariah Burke </p>
 					</article>
 					<article class="session hybrid">
-						<h1>What the #$@& Do I Do Now?"</h1>
+						<h1>What the #$@&amp; Do I Do Now?"</h1>
 						<p class="speakers">Doug Winnie</p>
 					</article>	
 					<article class="session design">
