Making the thing look decent in a iPad

--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,13 @@
 	<body id="schedule"> 
 		<header>
 			<h1 id="logo">D2WC</h1>
-			
+			<nav>
+				<ul>
+					<li><a href="schedule.html">Schedule</a></li>
+					<li><a href="speakers.html">Speakers</a></li>
+					<li><a href="">Venue</a></li>
+				</ul>
+			</nav>	
 		</header>
 		<div id ="content">
 		
