--- a/speakers.html
+++ b/speakers.html
@@ -8,7 +8,14 @@
 	</head> 
 	<body id="speakers"> 
 		<header>
-			<h1>D2WC</h1>
+			<h1 id="logo">D2WC</h1>
+			<nav>
+				<ul>
+					<li><a href="schedule.html">Schedule</a></li>
+					<li><a href="speakers.html">Speakers</a></li>
+					<li><a href="">Venue</a></li>
+				</ul>
+			</nav>
 		</header>
 		<div id ="content">
 			<article class="design">
