--- a/speakers.html
+++ b/speakers.html
@@ -8,7 +8,7 @@
 	</head> 
 	<body id="speakers"> 
 		<header>
-			<h1 id="logo">D2WC</h1>
+			<h1 id="logo"><a href="/">D2WC</a></h1>
 			<nav>
 				<ul>
 					<li><a href="schedule.html">Schedule</a></li>
