Making application more mobile friendly by making info come in chunks.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			<h1 id="logo">D2WC</h1>
 			<nav>
 				<ul>
-					<li><a href="schedule.html">Schedule</a></li>
-					<li><a href="speakers.html">Speakers</a></li>
-					<li><a href="">Venue</a></li>
+					<li><a href="/sessions">Schedule</a></li>
+					<li><a href="/speakers">Speakers</a></li>
+					<li><a href="/venue">Venue</a></li>
 				</ul>
 			</nav>	
 		</header>
