Had massive issues with getting relative URLS correct on phone gap.  Done now.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<h1 id="logo">D2WC</h1>
 			<nav>
 				<ul>
-					<li><a href="/sessions">Schedule</a></li>
-					<li><a href="/speakers">Speakers</a></li>
-					<li><a href="/venue">Venue</a></li>
+					<li><a href="sessions/index.html">Schedule</a></li>
+					<li><a href="speakers/index.html">Speakers</a></li>
+					<li><a href="venue/index.html">Venue</a></li>
 				</ul>
 			</nav>	
 		</header>
