--- a/speakers/hoober.html
+++ b/speakers/hoober.html
@@ -12,7 +12,7 @@
 			<h1 id="logo"><a href="/">D2WC</a></h1>
 			<nav>
 				<ul>
-					<li><a href="/speakers">&larr; Speakers</a></li>
+					<li><a href="index.html">&larr; Speakers</a></li>
 				</ul>
 			</nav>
 		</header>
