--- a/speakers/index.html
+++ b/speakers/index.html
@@ -5,16 +5,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<link rel="stylesheet" href="../css/main.css" />
-		<script src="js/main.js"></script>
+		<script src="../js/main.js"></script>
 	</head> 
 	<body class="speaker"> 
 		<header>
 			<h1 id="logo"><a href="/">D2WC</a></h1>
 			<nav>
 				<ul>
-					<li><a href="/sessions">Schedule</a></li>
-					<li><a href="/speakers">Speakers</a></li>
-					<li><a href="/venue">Venue</a></li>
+					<li><a href="../sessions/index.html">Schedule</a></li>
+					<li><a href="index.html">Speakers</a></li>
+					<li><a href="../venue/index.html">Venue</a></li>
 				</ul>
 			</nav>
 		</header>
