Added images to app so they could be transferred as part of the app.

--- a/speakers/babbage.html
+++ b/speakers/babbage.html
@@ -21,7 +21,7 @@
 				<h1>Jim Babbage<a name="babbage"></a></h1>
 				
 				<p class="blurb">Designer, Author, Video Presenter, Community Professional, AEL </p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/jimBabbage_bw.jpg" width="200" height="200" alt="Jim Babbage" />Bio: </strong>Jim's passion to share knowledge, take photographs, and manipulate images led him to long-lasting careers in those areas as a  college professor and creative professional. Jim is a regular contributor to Community MX, where he's written hundreds of articles on Fireworks, Dreamweaver, Photoshop, and general web and photography topics and he has spoken at Adobe MAX and D2WC. Currently, Jim is a Solutions Consultant for Adobe, supporting the Canadian educational sales team.</p>					
+				<p><strong><img src="../img/speakers/jimBabbage_bw.jpg" width="200" height="200" alt="Jim Babbage" />Bio: </strong>Jim's passion to share knowledge, take photographs, and manipulate images led him to long-lasting careers in those areas as a  college professor and creative professional. Jim is a regular contributor to Community MX, where he's written hundreds of articles on Fireworks, Dreamweaver, Photoshop, and general web and photography topics and he has spoken at Adobe MAX and D2WC. Currently, Jim is a Solutions Consultant for Adobe, supporting the Canadian educational sales team.</p>					
 			</article>
 		</div>	
 		<footer>
