--- a/speakers/erik.html
+++ b/speakers/erik.html
@@ -22,7 +22,7 @@
 
 				  <p class="blurb">Designer, Podcaster, Trainer</p>
 
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/erik_bw.jpg" width="200" height="200" alt="Erik" />Bio:</strong> Erik Bernskiold is a web designer and technology geek who spends his days building websites for clients at <a href="http://www.xldstudios.com/" onClick="javascript:_gaq.push(['_trackEvent','outbound-widget','http://www.xldstudios.com']);">XLD Studios</a> and training people in web design and other media creation at <a href="http://www.bernskioldmedia.com" onClick="javascript:_gaq.push(['_trackEvent','outbound-widget','http://www.bernskioldmedia.com']);">Bernskiold Media</a>.</p>
+				<p><strong><img src="../img/speakers/erik_bw.jpg" width="200" height="200" alt="Erik" />Bio:</strong> Erik Bernskiold is a web designer and technology geek who spends his days building websites for clients at <a href="http://www.xldstudios.com/" onClick="javascript:_gaq.push(['_trackEvent','outbound-widget','http://www.xldstudios.com']);">XLD Studios</a> and training people in web design and other media creation at <a href="http://www.bernskioldmedia.com" onClick="javascript:_gaq.push(['_trackEvent','outbound-widget','http://www.bernskioldmedia.com']);">Bernskiold Media</a>.</p>
 			</article>
 		</div>	
 		<footer>
