--- a/speakers/francis.html
+++ b/speakers/francis.html
@@ -22,7 +22,7 @@
 
 				<p class="blurb">Hybrid, CSS demi-god, UX, Eight-Shapes</p>
 
-				  <p><strong><img src="http://d2wc.com/assets/images/speakers/fancisRupert_bw.jpg" width="200" height="200" alt="Francis" />Bio:</strong> Multi-faceted design consultant with a career spanning many User Experience Design positions. </p>
+				  <p><strong><img src="../img/speakers/fancisRupert_bw.jpg" width="200" height="200" alt="Francis" />Bio:</strong> Multi-faceted design consultant with a career spanning many User Experience Design positions. </p>
 				  France's Specialties:
 				<p> Interaction design, Information Design, Information Architecture, User Interface Design, Visual Design, Graphic Design, Web Standards, CSS-based web design, Prototyping, Infographics, Information visualization. </p>
 
