--- a/speakers/garth.html
+++ b/speakers/garth.html
@@ -22,7 +22,7 @@
 
 				  <p class="blurb">Adobe UX demi-god, Author, Community Professional, podcaster</p>
 
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/garth_bw.jpg" width="200" height="200" alt="Garth" />Bio: </strong>User Experience Designer, HTML5 &amp; CSS3 Coder, Technical Trainer, Speaker, Author. </p>
+				<p><strong><img src="../img/speakers/garth_bw.jpg" width="200" height="200" alt="Garth" />Bio: </strong>User Experience Designer, HTML5 &amp; CSS3 Coder, Technical Trainer, Speaker, Author. </p>
 				<p>Specialties<br />
 				Actionscript, Advanced CSS, CakePHP, HTML5, Javascript, MySQL, NodeJS, PHP, Ruby, Rails</p>
 			</article>
