--- a/speakers/hoober.html
+++ b/speakers/hoober.html
@@ -21,7 +21,7 @@
 				<h1>Steven Hoober<a name="hoober"></a></h1>
 
 				<p class="blurb"Designer, Mobile / UX Author</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/hoober.jpg" width="200" height="200" alt="Steven Hoober">Bio: </strong>Steven is a Senior Interaction Designer with leading mobile design agency Little Springs Design. He has led projects on security, account management, content distribution, and communications services for numerous products, from construction supplies to hospital recordkeeping. Before coming to Little Springs, Steven spent eight years at US mobile operator Sprint.</p>
+				<p><strong><img src="../img/speakers/hoober.jpg" width="200" height="200" alt="Steven Hoober">Bio: </strong>Steven is a Senior Interaction Designer with leading mobile design agency Little Springs Design. He has led projects on security, account management, content distribution, and communications services for numerous products, from construction supplies to hospital recordkeeping. Before coming to Little Springs, Steven spent eight years at US mobile operator Sprint.</p>
 				
 			</article>
 		</div>	
