--- a/speakers/houge.html
+++ b/speakers/houge.html
@@ -19,7 +19,7 @@
 		<div id ="content">
 			<article  class="design"><h1>Dave Hogue<a name="hogue"></a></h1>
 				<p class="blurb">Designer, Video, FW Guru</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/davehogue_bw.jpg" width="200" height="200" alt="Dave Hogue" />Bio:</strong> David M. Hogue, Ph.D. is Vice President of Experience Design (Fellow) at Fluid in San Francisco. He has 15 years experience studying and designing interfaces and combines his skills as an interaction designer and applied psychologist to bring deeper insight into visitor and customer behavior and motivation. Dave teaches information design, interaction design, social media, and mobile design courses at SFSU, is an author for Lynda.com, and has a special interest in design process, methodology, and strategy. Clients include The North Face, Reebok, Timberland, Warner Bros., Charles Schwab, Wells Fargo, Sears, JC Penney and Sur La Table.</p>
+				<p><strong><img src="../img/speakers/davehogue_bw.jpg" width="200" height="200" alt="Dave Hogue" />Bio:</strong> David M. Hogue, Ph.D. is Vice President of Experience Design (Fellow) at Fluid in San Francisco. He has 15 years experience studying and designing interfaces and combines his skills as an interaction designer and applied psychologist to bring deeper insight into visitor and customer behavior and motivation. Dave teaches information design, interaction design, social media, and mobile design courses at SFSU, is an author for Lynda.com, and has a special interest in design process, methodology, and strategy. Clients include The North Face, Reebok, Timberland, Warner Bros., Charles Schwab, Wells Fargo, Sears, JC Penney and Sur La Table.</p>
 				
 			</article>
 		</div>	
