--- a/speakers/huddleston.html
+++ b/speakers/huddleston.html
@@ -21,7 +21,7 @@
 				<h1>Rob Huddleston<a name="huddleston"></a></h1>
 
 				<p class="blurb">Developer, Author, Community Professional, Teacher/Instructor</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/robHuddles_bw.jpg" width="200" height="200" alt="Rob" />Bio: </strong>California, Sacramento in the Web Design and Interactive Media
+				<p><strong><img src="../img/speakers/robHuddles_bw.jpg" width="200" height="200" alt="Rob" />Bio: </strong>California, Sacramento in the Web Design and Interactive Media
 				  department, where he teaches programming and design, focusing heavily
 				  on mobile development. He has been creating web pages and applications
 				  since 1994, and worked for many years as a corporate trainer, where he
