--- a/speakers/justin.html
+++ b/speakers/justin.html
@@ -21,7 +21,7 @@
 				<h1>Justin Seeley<a name="justin"></a></h1>
 
 				<p class="blurb">Designer, Lynda.com staff presenter, Community Professional</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/justin_bw.jpg" width="200" height="200" alt="Justin" />Bio: </strong>Justin Seeley is a renowned software trainer and graphic designer with nearly a decade's worth of experience in the creative media industry. His podcasts consistently rank among the top software how-to podcasts on the iTunes Store and his techniques have been featured on a variety of internet shows and digital publications. To date Justin has authored over 50 hours of instructional content on a variety of digital imaging and design related topics for companies like Total Training, Ten Ton Books, and most recentlyLynda.com and CreativeLIVE.</p>
+				<p><strong><img src="../img/speakers/justin_bw.jpg" width="200" height="200" alt="Justin" />Bio: </strong>Justin Seeley is a renowned software trainer and graphic designer with nearly a decade's worth of experience in the creative media industry. His podcasts consistently rank among the top software how-to podcasts on the iTunes Store and his techniques have been featured on a variety of internet shows and digital publications. To date Justin has authored over 50 hours of instructional content on a variety of digital imaging and design related topics for companies like Total Training, Ten Ton Books, and most recentlyLynda.com and CreativeLIVE.</p>
 				
 			</article>
 		</div>	
