--- a/speakers/pedersen.html
+++ b/speakers/pedersen.html
@@ -21,7 +21,7 @@
 				<h1>Aaron Pedersen<a name="pedersen"></a></h1>
 
 				<p class="blurb">Developer, Author</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/aaron_bw.jpg" width="200" height="200" alt="Aaron" />Bio:</strong> Founding Partner / Web Application Architect</p>
+				<p><strong><img src="../img/speakers/aaron_bw.jpg" width="200" height="200" alt="Aaron" />Bio:</strong> Founding Partner / Web Application Architect</p>
 				<p> Aaron Pedersen is the co-founder of DevelopmentArc with James Polanco.  He brings a over a decade of web application experience to the team from  working with many startup and Fortune 500 companies. Aaron currently  focuses on user interface technologies such as the Adobe Flash Platform  (Adobe Flex, AIR) and JavaScript. He believes that up-front planning and  team cooperation is key to the success of any web application for  today's web environment.</p>
 				<p> Aaron was a speaker at Adobe Max 2009 in Los Angeles speaking about  "Delivering Successful Flash Platform Projects" and "Workflows for the  Flash Platform." He was also a speaker at Adobe Max 2008 in both San  Francisco and Milan, Italy speaking on "Flex Best Practices" for  designers and for developers.</p>
 				<p> Aaron has been a lead, planner and architect on projects that include  many private and public web applications. Among the public sites that he  is excited to highlight include: Lexus.com,Scion.com,Toyota's "Build  Your Toyota" configurator, the Yahoo Mail Flickr application, and  WorkflowLab. WorkflowLab was the first chance for DevelopmentArc to  implement Flex 4 Component Lifecycle research ideas into a production  environment. WorkflowLab is now available on Adobe Labs.</p>
