--- a/speakers/stewart.html
+++ b/speakers/stewart.html
@@ -17,11 +17,11 @@
 			</nav>
 		</header>
 		<div id ="content">
-			<article class="dev"
+			<article class="dev">
 				<h1>Ryan Stewart<a name="stewart"></a></h1>
 
 				<p class="blurb">Developer, Adobe Evangelist, Author</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/ryanstewart_bw.jpg" width="200" height="200" alt="Ryan Stewart" />Bio: </strong>Ryan Stewart is a Web Developer Evangelist for Adobe Systems. After graduating from the University of Pennsylvania with a degree in Economics he started on the Flash Platform by building eLearning rich Internet applications in Flex 1.5 and ColdFusion 7 for the Wharton School of Business. He is a long time blogger and had a prominent blog on ZDNet where he covered all sides of rich Internet applications. He has spoken at a number of industry conferences including Web 2.0 Expo, Adobe MAX, 360|Flex, SXSW, PHP Tek, and Web Design World. When not working with the latest Adobe technology you can find him in Seattle where he enjoys making beer, mountaineering, and spending as much time as possible in the outdoors. You can email him at <a href="mailto:ryan@adobe.com">ryan@adobe.com</a> or find his blog at http://blog.digitalbackcountry.com</p>
+				<p><strong><img src="../img/speakers/ryanstewart_bw.jpg" width="200" height="200" alt="Ryan Stewart" />Bio: </strong>Ryan Stewart is a Web Developer Evangelist for Adobe Systems. After graduating from the University of Pennsylvania with a degree in Economics he started on the Flash Platform by building eLearning rich Internet applications in Flex 1.5 and ColdFusion 7 for the Wharton School of Business. He is a long time blogger and had a prominent blog on ZDNet where he covered all sides of rich Internet applications. He has spoken at a number of industry conferences including Web 2.0 Expo, Adobe MAX, 360|Flex, SXSW, PHP Tek, and Web Design World. When not working with the latest Adobe technology you can find him in Seattle where he enjoys making beer, mountaineering, and spending as much time as possible in the outdoors. You can email him at <a href="mailto:ryan@adobe.com">ryan@adobe.com</a> or find his blog at http://blog.digitalbackcountry.com</p>
 				
 			</article>
 		</div>	
