--- a/speakers/stucki.html
+++ b/speakers/stucki.html
@@ -21,7 +21,7 @@
 				<h1>Ben Stucki<a name="stucki"></a></h1>
 
 				<p class="blurb">Developer, Author, Community Professional</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/benstucki_bw.jpg" width="200" height="200" alt="Ben Stucki" />Bio:</strong> Ben Stucki is a Software Engineer, Interaction Designer and Founder of DAIO (http://daio.com). He has more than 10 years of experience building complex, client-side software and believes that good developers and great design are what make viable business models viable businesses.</p>
+				<p><strong><img src="../img/speakers/benstucki_bw.jpg" width="200" height="200" alt="Ben Stucki" />Bio:</strong> Ben Stucki is a Software Engineer, Interaction Designer and Founder of DAIO (http://daio.com). He has more than 10 years of experience building complex, client-side software and believes that good developers and great design are what make viable business models viable businesses.</p>
 				
 			</article>
 		</div>	
