--- a/speakers/tpryan.html
+++ b/speakers/tpryan.html
@@ -21,7 +21,7 @@
 				<h1>Terry Ryan<a name="tpryan"></a></h1>
 
 				<p class="blurb">Developer, Adobe Evangelist, Author</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/terryRyan_bw.jpg" width="200" height="200" alt="Terry Ryan" />Bio:</strong> I'm a 35 year old redhead geek from Philly. 
+				<p><strong><img src="../img/speakers/terryRyan_bw.jpg" width="200" height="200" alt="Terry Ryan" />Bio:</strong> I'm a 35 year old redhead geek from Philly. 
 				  I'm currently a Developer Evangelist for <a href="http://www.terrenceryan.com/job">Adobe</a>.
 				Also the author of <a href="http://www.terrenceryan.com/book">Driving Technical Change</a></p>
 				<p><a href="http://www.terrenceryan.com/">http://www.terrenceryan.com/</a></p>
