--- a/speakers/val.html
+++ b/speakers/val.html
@@ -20,7 +20,7 @@
 			<article class="design"><h1>Val Head<a name="val"></a></h1>
 
 				<p class="blurb">Designer, Hybrid, Event organizer</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/valHead_bw.jpg" width="200" height="200" alt="Val" />Bio: </strong>Val  is totally into design, type and code. She is an independent designer and consultant who wants to see the internet stay as awesome as possible. Sometimes she puts pixels aside to draw letters and screen print, sew LEDs into things, or send lots of mail. She speaks internationally at conferences about design and interaction. She also runs a popular web design conference, Web Design Day, in Pittsburgh and a local creative coding meet up, Loop Pittsburgh. She tweets too much at @vlh and blogs almost enough at valhead.com</p>
+				<p><strong><img src="../img/speakers/valHead_bw.jpg" width="200" height="200" alt="Val" />Bio: </strong>Val  is totally into design, type and code. She is an independent designer and consultant who wants to see the internet stay as awesome as possible. Sometimes she puts pixels aside to draw letters and screen print, sew LEDs into things, or send lots of mail. She speaks internationally at conferences about design and interaction. She also runs a popular web design conference, Web Design Day, in Pittsburgh and a local creative coding meet up, Loop Pittsburgh. She tweets too much at @vlh and blogs almost enough at valhead.com</p>
 				
 			</article>
 		</div>	
