--- a/speakers/williamson.html
+++ b/speakers/williamson.html
@@ -21,7 +21,7 @@
 				<h1>James Williamson<a name="williamson"></a></h1>
 
 				<p class="blurb">Hybrid, Lynda.com Senior Author, Book Author, Community Professional</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/James_Williamson_bw.jpg" width="200" height="200" alt="James Williamson" />Bio: </strong>James Williamson is a senior author for lynda.com and an Adobe Certified  Instructor. He has many years of web, print, and digital video  experience, and has been a featured speaker at Flashforward as well as a  regular speaker at Adobe MAX. James also blogs (infrequently) about all  things web at his site, Simple Primate, which can be found at <a href="http://www.simpleprimate.com" target="blank">www.simpleprimate.com</a>. </p>
+				<p><strong><img src="../img/speakers/James_Williamson_bw.jpg" width="200" height="200" alt="James Williamson" />Bio: </strong>James Williamson is a senior author for lynda.com and an Adobe Certified  Instructor. He has many years of web, print, and digital video  experience, and has been a featured speaker at Flashforward as well as a  regular speaker at Adobe MAX. James also blogs (infrequently) about all  things web at his site, Simple Primate, which can be found at <a href="http://www.simpleprimate.com" target="blank">www.simpleprimate.com</a>. </p>
 				
 			</article>
 		</div>	
