--- a/speakers/griffith.html
+++ b/speakers/griffith.html
@@ -20,7 +20,7 @@
 			<article class="dev"><h1>Chris Griffith<a name="griffith"></a></h1>
 
 				<p class="blurb">Developer, Hybrid, Author, Community Professional</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/griffith_bw.jpg" width="200" height="200" alt="Chris Griffith" />Bio: </strong>I am a Staff Engineer in the User Experience group at Qualcomm, Inc. I  have over 15 years experience developing a wide range of prototypes for  a variety of clients. I currently work with the full spectrum of the  Flash Platform from mobile devices to web/desktop</p>
+				<p><strong><img src="../img/speakers/griffith_bw.jpg" width="200" height="200" alt="Chris Griffith" />Bio: </strong>I am a Staff Engineer in the User Experience group at Qualcomm, Inc. I  have over 15 years experience developing a wide range of prototypes for  a variety of clients. I currently work with the full spectrum of the  Flash Platform from mobile devices to web/desktop</p>
 				<p>I am also presently the manager of the San Diego Flash User Group and  the Flash Catalyst Community Lead for Adobe Systems, Inc, as well as an  Adobe Community Professional. I am regularly invited to speak at  conferences such as Adobe MAX, 360Flex, D2WC, and various user groups.</p>
 				<p>I also am involved with the National Science Foundation's National  Science Digital Library project. Recently I have developed several  iPhone applications. I also write for peachpit.com and O'Reilly's  InsideRIA. When I am not coding, I am either spending time with my  family or out sea kayaking.</p>
 				
