--- a/speakers/polanco.html
+++ b/speakers/polanco.html
@@ -21,7 +21,7 @@
 				<h1>James Polanco<a name="polanco"></a></h1>
 
 				<p class="blurb">Developer, Author</p>
-				<p><strong><img src="http://d2wc.com/assets/images/speakers/jamespolanco_bw.jpg" width="200" height="200" alt="James Polanco" />Bio:</strong> Founding Partner / Web Application Architect</p>
+				<p><strong><img src="../img/speakers/jamespolanco_bw.jpg" width="200" height="200" alt="James Polanco" />Bio:</strong> Founding Partner / Web Application Architect</p>
 				<p> James Polanco is a web application architect and co-founder of  DevelopmentArc, who focuses on the Flash Platform (Flash, AIR, Flex,  etc.). He has been dabbling with Flash since the beginning, but became  serious about development and research with the release of Flash MX.  Over the years James has focused primarily on ActionScript development,  design patterns and component implementations which became a natural fit  for Flex development and web application planning and architecture.</p>
 				<p> James has worked on, lead and planned projects such as Scion.com,  Lexus.com, Toyota.com, Libsyn Podcast Analytics Dashboard, Fake Science  Music Store, ILM The show, Adobe Kuler, Nortel's Energy Efficiency  Calculator, Adobe WorkflowLab and many other projects and applications  for startups to Fortune 500 companies. He is an avid blogger, author,  speaker and researcher focusing on technology implementations, best  practices and analysis of web enabled tools and technologies. When he  has free time (which is rare now-a-days), he is also a DJ, producer,  snow boarder and amateur rock climber.</p>
 				
